--- a/src/sass/modules/_nav.scss
+++ b/src/sass/modules/_nav.scss
@@ -13,7 +13,7 @@
     height: 100vh;
     position: fixed;
     top: $header-height; 
-    width: susy-span(1.25 of 12);
+    width: 7em;
 
     &-avatar {
         background: $blue;
